Implement kafka in docker with admin announcement